Fixed flickering effect and positioning of popup.
Fixed flickering effect and positioning of popup when scroll bar comes up in different devices.

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,8 @@
   padding-left: 15px;
   margin-right: auto;
   margin-left: auto;
+  position: absolute;
+  height:100%;
 }
 @media (min-width: 768px) {
   .container {
